# devops-agent

./: .gitignore  README.md
devops-app/: app.py  env.example  pyproject.toml  server.py
devops-app/agents/: create_agent.py  diagram_agent.py  graph.py  planning_agent.py  shared_agent.py  supervisor_agent.py  terraform_agent.py
devops-app/mcp/aws-diagram-mcp-server/: pyproject.toml
devops-app/mcp/aws-diagram-mcp-server/awslabs/aws_diagram_mcp_server/: server.py
devops-app/mcp/cdk-mcp-server/awslabs/cdk_mcp_server/core/: server.py
devops-app/mcp/core-mcp-server/: pyproject.toml
devops-app/mcp/core-mcp-server/awslabs/core_mcp_server/: server.py
devops-app/mcp/terraform-mcp-server/: pyproject.toml
devops-app/mcp/terraform-mcp-server/awslabs/terraform_mcp_server/: server.py
devops-app/mcp/terraform-mcp-server/awslabs/terraform_mcp_server/scripts/: scrape_aws_terraform_best_practices.py
devops-app/mcp/terraform-mcp-server/tests/: test_server.py
devops-app/supervisor/: app.py  graph.py
devops-app/tools/: configure_pipeline.py  push_to_github.py  write_project_to_disk.py
devops-app/utils/: system_prompts.py
venv2/: pyvenv.cfg
